Subida de archivos

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -11,6 +11,8 @@
 </head>
 <body>
 
+    <!--<img src="http://localhost:3000/imagen/usuarios/5af4822d6b3b9113b8bec91b-323.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c3VhcmlvIjp7InJvbGUiOiJBRE1JTl9ST0xFIiwiZXN0YWRvIjp0cnVlLCJnb29nbGUiOmZhbHNlLCJfaWQiOiI1YjQ3N2ZmMTEzMjA0NTE3NzA1OTk3MjIiLCJub21icmUiOiJ0ZXN0MTYiLCJlbWFpbCI6InRlc3QxNkBnbWFpbC5jb20iLCJfX3YiOjAsImltZyI6IjViNDc3ZmYxMTMyMDQ1MTc3MDU5OTcyMi03ODEuanBnIn0sImlhdCI6MTUzNTA3MTA2NiwiZXhwIjoxNTM1MDczNjU4fQ.Gq6smVSw6VpOVduXALSrxXC10lOTeRAaKZ8EFa7LPU4"/>-->
+    
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
     <a href="#" onclick="signOut();">Sign out</a>
     <script>
